[FE] Update index.css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,6 +81,13 @@ button:focus-visible {
   align-items: center;
 }
 
+.dashboard-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
 /* Forms */
 
 .form-wrapper {
@@ -97,7 +104,6 @@ button:focus-visible {
 
 .form-group {
   display: flex;
-  /* flex-direction: column; */
   gap: 5%;
   justify-content: center;
   align-items: center;
